--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     # No Render, ele vai ler as variáveis. No seu PC, usa o localhost.
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/arcturus_db}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:suasenha} # ⚠️ Confirme se sua senha local é 'suasenha' ou 'admin'
+    password: ${SPRING_DATASOURCE_PASSWORD:suasenha}
 
   jpa:
     hibernate:
@@ -40,10 +40,18 @@ logging:
 aws:
   region: us-east-1
   s3:
-    # ☁️ Permite mudar o bucket via variável no futuro, se precisar
+    # ☁️ Permite mudar o bucket via variável no futuro
     bucket: ${AWS_S3_BUCKET:arcturus-assets-sa-marianna}
 
 # --- Configurações de Terceiros ---
 jamendo:
   client-id: ${JAMENDO_CLIENT_ID:22d88624}
   url: https://api.jamendo.com/v3.0/tracks/
+
+# --- 🔐 Configurações de Segurança (NOVO) ---
+api:
+  security:
+    token:
+      # O segredo usado para assinar os tokens JWT.
+      # Localmente usa a frase fixa. Na nuvem, podemos mudar via variável JWT_SECRET.
+      secret: ${JWT_SECRET:MinhaSenhaSuperSecretaDoArcturusProject123456}
