--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.10</version>
 		<relativePath/>
-		<!--  lookup parent from repository  -->
 	</parent>
 	<groupId>com.arcturus</groupId>
 	<artifactId>stream-api</artifactId>
@@ -106,6 +105,13 @@
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
