--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,13 @@
-name: Backend CI (Spring Boot)
+name: Java Backend CI
 
 on:
   push:
     branches: [ "main", "master" ]
-    paths:
-      - 'src/main/**'
-      - 'src/test/**'
-      - 'pom.xml'
   pull_request:
     branches: [ "main", "master" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,6 +21,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Rodar Testes Unitários
 
+      - name: Dar permissão de execução ao Maven Wrapper
+        run: chmod +x mvnw
+
+      - name: Rodar Testes com Maven
         run: ./mvnw test -DargLine="-XX:+EnableDynamicAgentLoading -Xshare:off"
